--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Nunito', sans-serif;
+  height: 100vh;
+}
+
+body {
+  background-image: linear-gradient(45deg, #804c79, #413765);
+  font-size: 14px;
 }
 
 a {
